# chess-bot

chess-bot/: package-lock.json  package.json
chess-service/: package-lock.json  package.json  server.js
chess-ui/: index.html  package-lock.json  package.json
chess-ui/src/: App.tsx  ChessGame.jsx  main.jsx
engine/: CMakeLists.txt  COMPARACION.md  GUIA_DETERMINISTA.md  INICIO_RAPIDO.md  README.md  generate_book_from_pgn.py  main.cpp  main_perft_ok.cpp  opening_book.cpp  opening_book.h  opening_book_analysis.md  opening_book_backup.cpp  opening_book_deterministic.cpp  opening_book_improved.cpp  tactical_detection_improved.cpp  validate_book.py
